--- a/WebShop.API/WebShop.API.csproj
+++ b/WebShop.API/WebShop.API.csproj
@@ -175,6 +175,30 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\border.gif" />
+    <Content Include="Content\images\cart-price.gif" />
+    <Content Include="Content\images\cart.gif" />
+    <Content Include="Content\images\container-t.gif" />
+    <Content Include="Content\images\field.gif" />
+    <Content Include="Content\images\image1.jpg" />
+    <Content Include="Content\images\image2.jpg" />
+    <Content Include="Content\images\image3.jpg" />
+    <Content Include="Content\images\image4.jpg" />
+    <Content Include="Content\images\logo.gif" />
+    <Content Include="Content\images\logo1.gif" />
+    <Content Include="Content\images\logo2.gif" />
+    <Content Include="Content\images\logo3.gif" />
+    <Content Include="Content\images\logo4.gif" />
+    <Content Include="Content\images\logo5.gif" />
+    <Content Include="Content\images\logo_test.gif" />
+    <Content Include="Content\images\main.gif" />
+    <Content Include="Content\images\next.gif" />
+    <Content Include="Content\images\prev.gif" />
+    <Content Include="Content\images\search.gif" />
+    <Content Include="Content\images\slide1.jpg" />
+    <Content Include="Content\images\slide2.jpg" />
+    <Content Include="Content\images\tab.gif" />
+    <Content Include="Content\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -475,6 +499,10 @@
     <Content Include="Scripts\i18n\angular-locale_nb-no.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jquery-1.4.1.min.js" />
+    <Content Include="Scripts\jquery-func.js" />
+    <Content Include="Scripts\jquery.jcarousel.pack.js" />
+    <Content Include="Scripts\jquery.slide.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
