--- a/WebShop.API/WebShop.API.csproj
+++ b/WebShop.API/WebShop.API.csproj
@@ -464,6 +464,7 @@
     <Content Include="Scripts\angular\item.js" />
     <Content Include="Scripts\angular\root.js" />
     <Content Include="Scripts\angular\main.js" />
+    <Content Include="Scripts\angular\shoppingCart.js" />
     <Content Include="Scripts\angular\views\login.html" />
     <Content Include="Scripts\angular\views\root.html" />
     <Content Include="Scripts\angular\views\item.html" />
