--- a/WebShop.API/WebShop.API.csproj
+++ b/WebShop.API/WebShop.API.csproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -461,8 +462,10 @@
     <Content Include="Scripts\angular\factories.js" />
     <Content Include="Scripts\angular\login.js" />
     <Content Include="Scripts\angular\item.js" />
+    <Content Include="Scripts\angular\cart.js" />
     <Content Include="Scripts\angular\root.js" />
     <Content Include="Scripts\angular\main.js" />
+    <Content Include="Scripts\angular\views\cart.html" />
     <Content Include="Scripts\angular\views\login.html" />
     <Content Include="Scripts\angular\views\root.html" />
     <Content Include="Scripts\angular\views\item.html" />
