--- a/WebShop.API/WebShop.API.csproj
+++ b/WebShop.API/WebShop.API.csproj
@@ -187,6 +187,7 @@
     <Content Include="Content\images\image3.jpg" />
     <Content Include="Content\images\image4.jpg" />
     <Content Include="Content\images\logo.gif" />
+    <Content Include="Content\images\logo.jpg" />
     <Content Include="Content\images\logo1.gif" />
     <Content Include="Content\images\logo2.gif" />
     <Content Include="Content\images\logo3.gif" />
@@ -195,11 +196,14 @@
     <Content Include="Content\images\logo_test.gif" />
     <Content Include="Content\images\main.gif" />
     <Content Include="Content\images\next.gif" />
+    <Content Include="Content\images\NO_account_badge_std_blue.png" />
+    <Content Include="Content\images\NO_invoice_badge_std_blue.png" />
     <Content Include="Content\images\prev.gif" />
     <Content Include="Content\images\search.gif" />
     <Content Include="Content\images\slide1.jpg" />
     <Content Include="Content\images\slide2.jpg" />
     <Content Include="Content\images\tab.gif" />
+    <Content Include="Content\images\VisaMaster.png" />
     <Content Include="Content\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -460,6 +464,8 @@
     <Content Include="Scripts\angular-touch.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\angular\payment.js" />
+    <Content Include="Scripts\angular\shipping.js" />
     <Content Include="Scripts\angular\factories.js" />
     <Content Include="Scripts\angular\login.js" />
     <Content Include="Scripts\angular\item.js" />
@@ -468,6 +474,8 @@
     <Content Include="Scripts\angular\main.js" />
     <Content Include="Scripts\angular\shoppingCart.js" />
     <Content Include="Scripts\angular\views\cart.html" />
+    <Content Include="Scripts\angular\views\shipping.html" />
+    <Content Include="Scripts\angular\views\payment.html" />
     <Content Include="Scripts\angular\views\root.html" />
     <Content Include="Scripts\angular\views\item.html" />
     <Content Include="Scripts\bootstrap.js" />
@@ -513,6 +521,8 @@
     <Content Include="Scripts\jquery.jcarousel.pack.js" />
     <Content Include="Scripts\jquery.slide.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\r.js" />
+    <Content Include="Scripts\require.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config" />
