--- a/WebShop.Domain/WebShop.Domain.csproj
+++ b/WebShop.Domain/WebShop.Domain.csproj
@@ -42,24 +42,69 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregateNotFoundException.cs" />
-    <Compile Include="CommandHandlers.cs" />
-    <Compile Include="Commands.cs" />
-    <Compile Include="ConcurrencyException.cs" />
-    <Compile Include="Domain.cs" />
-    <Compile Include="Events.cs" />
-    <Compile Include="EventStore.cs" />
-    <Compile Include="FakeBus.cs" />
-    <Compile Include="IEventStore.cs" />
-    <Compile Include="InfrastructureCrap.DontBotherReadingItsNotImportant.cs" />
-    <Compile Include="Message.cs" />
-    <Compile Include="ProductDto.cs" />
+    <Compile Include="ShoppingCart\AddCartItem.cs" />
+    <Compile Include="ProductAvailabilityNotifications\AddedProductAvailabilityNotification.cs" />
+    <Compile Include="UserFavorites\AddedToFavorites.cs" />
+    <Compile Include="ProductAvailabilityNotifications\AddProductAvailabilityNotification.cs" />
+    <Compile Include="UserFavorites\AddToFavorites.cs" />
+    <Compile Include="Infrastructure\AggregateNotFoundException.cs" />
+    <Compile Include="Infrastructure\AggregateRoot.cs" />
+    <Compile Include="Order\BringPickupPointSelected.cs" />
+    <Compile Include="ShoppingCart\CartCheckedOut.cs" />
+    <Compile Include="ShoppingCart\CartCreated.cs" />
+    <Compile Include="ShoppingCart\CartItemAdded.cs" />
+    <Compile Include="ShoppingCart\CartItemRemoved.cs" />
+    <Compile Include="ShoppingCart\CheckOutCart.cs" />
+    <Compile Include="IntExtensions.cs" />
+    <Compile Include="Infrastructure\Command.cs" />
+    <Compile Include="Infrastructure\ConcurrencyException.cs" />
+    <Compile Include="Order\ConfirmPayButtonPayment.cs" />
+    <Compile Include="ShoppingCart\CreateCart.cs" />
+    <Compile Include="Order\CreateOrder.cs" />
+    <Compile Include="User\CreateUser.cs" />
+    <Compile Include="Infrastructure\DelegateAdjuster.cs" />
+    <Compile Include="ShoppingCart\ShoppingCartItem.cs" />
+    <Compile Include="Infrastructure\Event.cs" />
+    <Compile Include="Infrastructure\EventStore.cs" />
+    <Compile Include="Infrastructure\FakeBus.cs" />
+    <Compile Include="Infrastructure\Handles.cs" />
+    <Compile Include="Infrastructure\ICommandSender.cs" />
+    <Compile Include="Infrastructure\IEventPublisher.cs" />
+    <Compile Include="Infrastructure\IEventStore.cs" />
+    <Compile Include="Infrastructure\PrivateReflectionDynamicObject.cs" />
+    <Compile Include="Order\IVerifyPayButtonPayment.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Order\Order.cs" />
+    <Compile Include="Order\OrderCommandHandlers.cs" />
+    <Compile Include="Order\OrderCreated.cs" />
+    <Compile Include="Order\PayButtonPaymentConfirmed.cs" />
+    <Compile Include="Order\VerifyPayButtonPayment.cs" />
+    <Compile Include="Infrastructure\Message.cs" />
+    <Compile Include="Order\PaymentCompleted.cs" />
+    <Compile Include="Order\PaymillTokenVerificationException.cs" />
+    <Compile Include="Infrastructure\PrivateReflectionDynamicObjectExtensions.cs" />
+    <Compile Include="ProductAvailabilityNotifications\ProductAvailabilityCommandHandlers.cs" />
+    <Compile Include="ProductAvailabilityNotifications\ProductAvailabilityNotification.cs" />
+    <Compile Include="Products\ProductCreated.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadModel.cs" />
+    <Compile Include="ShoppingCart\RemoveCartItem.cs" />
+    <Compile Include="UserFavorites\RemovedFromFavorites.cs" />
+    <Compile Include="ProductAvailabilityNotifications\RemovedProductAvailabilityNotification.cs" />
+    <Compile Include="UserFavorites\RemoveFromFavorites.cs" />
+    <Compile Include="ProductAvailabilityNotifications\RemoveProductAvailabilityNotification.cs" />
+    <Compile Include="Infrastructure\Repository.cs" />
+    <Compile Include="Order\SelectBringPickupPoint.cs" />
+    <Compile Include="ShoppingCart\ShoppingCart.cs" />
+    <Compile Include="ShoppingCart\ShoppingCartCommandHandlers.cs" />
+    <Compile Include="User\UserCreated.cs" />
+    <Compile Include="UserFavorites\UserFavoriteCommandHandlers.cs" />
+    <Compile Include="UserFavorites\UserFavorites.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ShoppingCart\ClassDiagram1.cd" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
